updating with new content

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description              : "Our lab takes a human-centric approach to develop In
 
 url                      : https://uw-insight-lab.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "uw-insight-lab/uw-insight-lab.gitub.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -57,6 +57,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/uw-insight-lab"
+    - label: "Hugging Face"
+      icon: "fas fa-fw fa-link"
+      url: "https://huggingface.co/uw-insight-lab"
 # Site Footer
 footer:
   links:
