--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ copyright_url            : # "copyright" URL, defaults to site.url
 
 # Analytics
 analytics:
-  provider               : # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : "G-VSCHG7TRM9" # Replace with your actual tracking ID
+    anonymize_ip         : true # true, false (default)
 
 
 # Site Author
